--- a/mental_models_system/requirements.txt
+++ b/mental_models_system/requirements.txt
@@ -1,41 +1,46 @@
 # Core
-pandas>=2.0.0
-numpy>=1.24.0
-openpyxl>=3.1.0
+fastapi>=0.100.0
+uvicorn>=0.22.0
+pydantic>=2.0.0
+python-multipart>=0.0.6
 
 # Database
 psycopg2-binary>=2.9.0
 sqlalchemy>=2.0.0
 
-# Spark
-pyspark>=3.5.0
+# HTTP & Async
+aiohttp>=3.8.0
+httpx>=0.24.0
+requests>=2.31.0
 
-# Analysis
-scipy>=1.11.0
-scikit-learn>=1.3.0
-statsmodels>=0.14.0
+# Data Processing
+pandas>=2.0.0
+numpy>=1.24.0
+scipy>=1.10.0
 
-# Bayesian & HMM
-hmmlearn>=0.3.0
+# Machine Learning
+scikit-learn>=1.2.0
+
+# NLP & Embeddings
+sentence-transformers>=2.2.0
 
 # Visualization
 matplotlib>=3.7.0
-seaborn>=0.12.0
-plotly>=5.15.0
+plotly>=5.14.0
 
-# API
-fastapi>=0.104.0
-uvicorn>=0.24.0
-pydantic>=2.5.0
-
-# Dashboard
-dash>=2.14.0
-dash-bootstrap-components>=1.5.0
-
-# LLM Integration
-httpx>=0.26.0
-openai>=1.10.0
+# Document Processing
+PyPDF2>=3.0.0
+python-docx>=0.8.11
 
 # Utilities
 python-dotenv>=1.0.0
+pyyaml>=6.0.0
 tqdm>=4.65.0
+
+# Testing
+pytest>=7.3.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+
+# Type Checking
+mypy>=1.3.0
