--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "papaparse": "^5.4.1"
   },
   "devDependencies": {
-    "electron": "^latest",
+    "electron": "^28.0.0",
     "electron-builder": "^24.0.0",
     "concurrently": "^7.0.0"
   },
