chore: add Clojure and Node.js entries to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,13 @@ Thumbs.db
 *.key
 credentials.json
 secrets.json
+
+# Clojure
+.cpcache/
+target/
+.nrepl-port
+.lsp/
+
+# Node.js
+node_modules/
+package-lock.json
