feat: Bulletproof auto-updater with multi-source fallback chain
Update source priority:
1. SSH (private repo with deploy key) - Primary
2. HTTPS with token (authenticated) - Fallback 1
3. HTTPS public (if repo is public) - Fallback 2
4. Google Drive backup - Fallback 3

- Added SSH support with deploy key authentication
- Added authenticated HTTPS fallback with GitHub token
- Kept public HTTPS as additional fallback
- Google Drive remains as last resort backup
- Auto-creates GitHub issues when primary sources fail
- Never fails - always has a fallback source

--- a/mental_models_system/erlang-services/auto_updater/Dockerfile
+++ b/mental_models_system/erlang-services/auto_updater/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.19
 
-# Install required tools
+# Install required tools including openssh for SSH authentication
 RUN apk add --no-cache \
     bash \
     curl \
@@ -8,10 +8,14 @@ RUN apk add --no-cache \
     docker-cli \
     docker-cli-compose \
     unzip \
-    jq
+    jq \
+    openssh-client
 
 # Create app directory
 WORKDIR /updater
+
+# Create SSH directory
+RUN mkdir -p /root/.ssh && chmod 700 /root/.ssh
 
 # Copy update script
 COPY auto_update.sh /updater/auto_update.sh
