--- a/mental_models_system/erlang-services/docker-compose.yml
+++ b/mental_models_system/erlang-services/docker-compose.yml
@@ -9,18 +9,27 @@
 # Configure Google Drive backup URL via GDRIVE_BACKUP_URL environment variable.
 # 
 # Access the UI at: http://localhost:3000
+# Access the Settings page for one-click updates
 
 services:
-  # Auto-Updater - Bulletproof update system with multiple fallback sources
+  # Auto-Updater Service (Erlang/OTP) - Bulletproof update system with REST API
   # Update Source Priority:
   #   1. SSH (private repo with deploy key) - Primary
   #   2. HTTPS with token (authenticated) - Fallback 1
   #   3. HTTPS public (if repo is public) - Fallback 2
   #   4. Google Drive backup - Fallback 3
-  # When primary sources fail, creates a GitHub issue to alert Devin
-  auto-updater:
-    build: ./auto_updater
+  # 
+  # REST API Endpoints (port 8006):
+  #   GET  /health              - Health check
+  #   GET  /api/updater/status  - Current updater status
+  #   POST /api/updater/check   - Trigger update check
+  #   POST /api/updater/update  - Perform update
+  #   GET  /api/updater/config  - View configuration
+  auto-updater-service:
+    build: ./auto_updater_service
     container_name: mental-models-auto-updater
+    ports:
+      - "8006:8006"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - updater-repo:/repo
@@ -29,7 +38,7 @@ services:
       # Mount SSH deploy key for private repo access (optional but recommended)
       # Create key with: ssh-keygen -t ed25519 -f ./ssh_deploy_key -N ""
       # Add public key to GitHub repo Settings > Deploy keys (read-only)
-      - ${SSH_KEY_PATH:-./ssh_deploy_key}:/ssh/deploy_key:ro
+      - ${SSH_KEY_PATH:-./ssh_deploy_key}:/root/.ssh/deploy_key:ro
     environment:
       # SSH URL for private repo access (primary)
       - GITHUB_SSH_URL=git@github.com:Ripple-Analytics/Ripple_Analytics.git
@@ -37,17 +46,19 @@ services:
       - GITHUB_REPO_URL=https://github.com/Ripple-Analytics/Ripple_Analytics.git
       - GITHUB_BRANCH=master
       - UPDATE_CHECK_INTERVAL=300
-      # GitHub token for authenticated HTTPS and creating alert issues
+      # GitHub token for authenticated HTTPS (from .env file)
       - GITHUB_TOKEN=${GITHUB_TOKEN:-}
       - GITHUB_REPO=Ripple-Analytics/Ripple_Analytics
-      # SSH key path inside container
-      - SSH_KEY_PATH=/ssh/deploy_key
       # Configure Google Drive backup URL (optional)
       # Format: https://drive.google.com/file/d/FILE_ID/view or direct download link
       - GDRIVE_BACKUP_URL=${GDRIVE_BACKUP_URL:-}
-      # Optional webhook URL for custom alerts
-      - ALERT_WEBHOOK_URL=${ALERT_WEBHOOK_URL:-}
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8006/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
     networks:
       - mental-models-network
 
@@ -64,6 +75,7 @@ services:
     restart: unless-stopped
     networks:
       - mental-models-network
+
   # API Gateway - Routes requests to backend services
   api-gateway:
     build: ./api_gateway
@@ -171,9 +183,11 @@ services:
       - "3000:3000"
     environment:
       - API_GATEWAY_URL=http://api-gateway:8000
+      - AUTO_UPDATER_URL=http://auto-updater-service:8006
     depends_on:
       - api-gateway
       - chaos-engineering
+      - auto-updater-service
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "-q", "--spider", "http://localhost:3000/health"]
