feat: Add bulletproof multi-source update system with Chaos Monkey testing
- GitHub Source Service: Primary update source with SSH/PAT/Public fallback
- Google Drive Source Service: Backup update source with rclone integration
- Local Cache Service: Stores last known good versions for rollback
- Update Chaos Monkey: Resilience testing for the update system
- Updated docker-compose with all new services
- Enhanced Settings UI with source status and chaos testing controls
- Improved START.bat for one-click deployment

Update fallback chain: GitHub -> Google Drive -> Local Cache
Each source runs as an independent Docker container for maximum reliability.

--- a/mental_models_system/erlang-services/auto_updater_service/Dockerfile
+++ b/mental_models_system/erlang-services/auto_updater_service/Dockerfile
@@ -7,7 +7,7 @@ RUN apk add --no-cache git curl
 RUN curl -o /usr/local/bin/rebar3 https://s3.amazonaws.com/rebar3/rebar3 && \
     chmod +x /usr/local/bin/rebar3
 
-WORKDIR /app
+WORKDIR /build
 
 # Copy source files
 COPY rebar.config .
@@ -28,7 +28,8 @@ RUN apk add --no-cache \
     docker-cli \
     docker-cli-compose \
     openssh-client \
-    unzip
+    unzip \
+    jq
 
 # Create directories
 RUN mkdir -p /app /repo /data /root/.ssh && chmod 700 /root/.ssh
@@ -36,13 +37,13 @@ RUN mkdir -p /app /repo /data /root/.ssh && chmod 700 /root/.ssh
 WORKDIR /app
 
 # Copy the release from builder
-COPY --from=builder /app/_build/prod/rel/auto_updater_service ./
+COPY --from=builder /build/_build/prod/rel/auto_updater_service ./
 
 # Expose API port
 EXPOSE 8006
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:8006/health || exit 1
 
 # Run the release
