--- a/mental_models_system/erlang-services/auto_updater_service/rebar.config
+++ b/mental_models_system/erlang-services/auto_updater_service/rebar.config
@@ -2,7 +2,8 @@
 
 {deps, [
     {cowboy, "2.10.0"},
-    {jsx, "3.1.0"}
+    {jsx, "3.1.0"},
+    {gun, "2.0.1"}
 ]}.
 
 {shell, [
@@ -12,18 +13,20 @@
 {relx, [
     {release, {auto_updater_service, "1.0.0"}, [
         auto_updater_service,
+        cowboy,
+        jsx,
         sasl
     ]},
-    {mode, dev},
-    {dev_mode, true},
-    {include_erts, false},
-    {extended_start_script, true}
+    {dev_mode, false},
+    {include_erts, true},
+    {extended_start_script, true},
+    {sys_config, "./config/sys.config"},
+    {vm_args, "./config/vm.args"}
 ]}.
 
 {profiles, [
     {prod, [
         {relx, [
-            {mode, prod},
             {dev_mode, false},
             {include_erts, true}
         ]}
