--- a/mental_models_system/erlang-services/docker-compose.yml
+++ b/mental_models_system/erlang-services/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     environment:
       - GITHUB_SSH_URL=git@github.com:Ripple-Analytics/Ripple_Analytics.git
       - GITHUB_REPO_URL=https://github.com/Ripple-Analytics/Ripple_Analytics.git
-      - GITHUB_BRANCH=master
+      - GITHUB_BRANCH=release
       - UPDATE_CHECK_INTERVAL=300
       - GITHUB_TOKEN=${GITHUB_TOKEN:-}
       - GITHUB_REPO=Ripple-Analytics/Ripple_Analytics
@@ -72,7 +72,7 @@ services:
     environment:
       - GITHUB_SSH_URL=git@github.com:Ripple-Analytics/Ripple_Analytics.git
       - GITHUB_REPO_URL=https://github.com/Ripple-Analytics/Ripple_Analytics.git
-      - GITHUB_BRANCH=master
+      - GITHUB_BRANCH=release
       - GITHUB_TOKEN=${GITHUB_TOKEN:-}
       - GITHUB_REPO=Ripple-Analytics/Ripple_Analytics
     restart: unless-stopped
