fix: Add config directory to Dockerfile for Erlang release build

--- a/mental_models_system/erlang-services/auto_updater_service/Dockerfile
+++ b/mental_models_system/erlang-services/auto_updater_service/Dockerfile
@@ -12,6 +12,7 @@ WORKDIR /build
 # Copy source files
 COPY rebar.config .
 COPY src/ src/
+COPY config/ config/
 
 # Fetch dependencies and compile
 RUN rebar3 compile
