fix: Docker cache busting for UI updates
- Added COMMIT_HASH and BUILD_TIME build args to all service Dockerfiles
- Updated updater_worker.erl to use --no-cache and pass build args
- Fixed api_proxy_handler.erl to forward full API paths correctly
- Ensures source code changes are always picked up during rebuilds

This fixes the issue where UI changes weren't being reflected after
auto-updater pulled new commits due to Docker layer caching.

--- a/mental_models_system/erlang-services/chaos_engineering/Dockerfile
+++ b/mental_models_system/erlang-services/chaos_engineering/Dockerfile
@@ -6,6 +6,11 @@ RUN apk add --no-cache git
 COPY rebar.config .
 RUN rebar3 get-deps
 
+# CACHE BUSTER: This ARG changes with each commit, forcing rebuild of src layer
+ARG COMMIT_HASH=unknown
+ARG BUILD_TIME=unknown
+RUN echo "Building commit: ${COMMIT_HASH} at ${BUILD_TIME}"
+
 COPY src src/
 RUN rebar3 compile
 
