--- a/mental_models_system/erlang-services/desktop_ui/Dockerfile
+++ b/mental_models_system/erlang-services/desktop_ui/Dockerfile
@@ -6,7 +6,16 @@ RUN apk add --no-cache git
 COPY rebar.config .
 RUN rebar3 get-deps
 
+# CACHE BUSTER: This ARG changes with each commit, forcing rebuild of src layer
+# Pass --build-arg COMMIT_HASH=$(git rev-parse HEAD) during docker build
+ARG COMMIT_HASH=unknown
+ARG BUILD_TIME=unknown
+RUN echo "Building commit: ${COMMIT_HASH} at ${BUILD_TIME}"
+
+# Copy source files (this layer will rebuild when COMMIT_HASH changes)
 COPY src src/
+
+# Compile the application
 RUN rebar3 compile
 
 EXPOSE 3000
