--- a/mental_models_system/erlang-services/storage_service/Dockerfile
+++ b/mental_models_system/erlang-services/storage_service/Dockerfile
@@ -6,6 +6,11 @@ RUN apk add --no-cache git
 COPY rebar.config .
 RUN rebar3 get-deps
 
+# CACHE BUSTER: This ARG changes with each commit, forcing rebuild of src layer
+ARG COMMIT_HASH=unknown
+ARG BUILD_TIME=unknown
+RUN echo "Building commit: ${COMMIT_HASH} at ${BUILD_TIME}"
+
 COPY src src/
 RUN rebar3 compile
 
