Fix YAML syntax error in docker-compose.yml line 616
Fixed malformed line where 'chaos-eng restart: unless-stopped healthcheck:'
was concatenated on a single line instead of proper YAML structure.

--- a/mental_models_system/erlang-services/docker-compose.yml
+++ b/mental_models_system/erlang-services/docker-compose.yml
@@ -613,7 +613,9 @@ services:
       - auto-updater-blue
       - auto-updater-green
       - chaos-engineering-blue
-      - chaos-eng    restart: unless-stopped    healthcheck:
+      - chaos-engineering-green
+    restart: unless-stopped
+    healthcheck:
       test: ["CMD", "wget", "-q", "--spider", "http://localhost:8080/health"]
       interval: 10s
       timeout: 5s
