Fix deployment_controller Dockerfile - copy src before compile
The Dockerfile was running rebar3 compile before copying source files,
which caused the build to fail. Now copies src/ before compiling.

--- a/mental_models_system/erlang-services/deployment_controller/Dockerfile
+++ b/mental_models_system/erlang-services/deployment_controller/Dockerfile
@@ -4,18 +4,21 @@ RUN apk add --no-cache git docker-cli docker-compose
 
 WORKDIR /app
 
+# Copy rebar config and source files
 COPY rebar.config .
+COPY src src/
 
+# Download rebar3 and fetch dependencies
 RUN wget https://s3.amazonaws.com/rebar3/rebar3 && chmod +x rebar3
 RUN ./rebar3 get-deps
-RUN ./rebar3 compile
 
+# Cache buster args - these change on each build to ensure fresh source is compiled
 ARG COMMIT_HASH=unknown
 ARG BUILD_TIME=unknown
 ENV COMMIT_HASH=${COMMIT_HASH}
 ENV BUILD_TIME=${BUILD_TIME}
 
-COPY src src/
+# Compile the application
 RUN ./rebar3 compile
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
