fix: Stop continuous rebuild loop and fix all Dockerfiles
Critical fixes:
1. Auto-updater now tracks last processed commit to prevent rebuild loops
   - Added read_last_processed_commit() and save_last_processed_commit()
   - Only triggers rebuild when remote commit differs from BOTH current AND last processed
   - Persists to /data/last_processed_commit for container restarts

2. Fixed all Dockerfiles to download rebar3 before using it
   - erlang:26-alpine doesn't include rebar3 by default
   - Added: curl -o rebar3 https://s3.amazonaws.com/rebar3/rebar3 && chmod +x rebar3
   - Changed 'rebar3' to './rebar3' in all commands
   - Affected: desktop_ui, analysis_service, api_gateway, storage_service,
     harvester_service, ai_code_improver, chaos_engineering, chaos_monkey,
     blue_green_orchestrator, code_improver_service, gdrive_backup

3. Started log_checker_service for automated error detection
   - log_scanner.erl: Monitors all docker container logs
   - error_aggregator.erl: Deduplicates errors, tracks fixed issues
   - Will pipe errors to GitHub for visibility

Blue-green standby pattern:
- Active serves traffic
- Standby is built and ready but idle
- Only rebuild on actual updates, not continuous cycling

--- a/mental_models_system/erlang-services/blue_green_orchestrator/Dockerfile
+++ b/mental_models_system/erlang-services/blue_green_orchestrator/Dockerfile
@@ -7,8 +7,8 @@ WORKDIR /app
 COPY rebar.config .
 COPY src/ src/
 
-RUN rebar3 compile
-RUN rebar3 release
+RUN ./rebar3 compile
+RUN ./rebar3 release
 
 EXPOSE 8020
 
