--- a/mental_models_system/erlang-services/code_improver_service/Dockerfile
+++ b/mental_models_system/erlang-services/code_improver_service/Dockerfile
@@ -2,10 +2,12 @@ FROM erlang:26-alpine AS builder
 
 WORKDIR /app
 
-RUN apk add --no-cache git
+RUN apk add --no-cache git curl
+# Download rebar3
+RUN curl -o rebar3 https://s3.amazonaws.com/rebar3/rebar3 && chmod +x rebar3
 
 COPY rebar.config rebar.lock* ./
-RUN rebar3 get-deps
+RUN ./rebar3 get-deps
 
 # CACHE BUSTER: This ARG changes with each commit, forcing rebuild of src layer
 ARG COMMIT_HASH=unknown
@@ -15,7 +17,7 @@ RUN echo "Building commit: ${COMMIT_HASH} at ${BUILD_TIME}"
 COPY config ./config
 COPY src ./src
 
-RUN rebar3 as prod release
+RUN ./rebar3 as prod release
 
 FROM erlang:26-alpine
 
