--- a/mental_models_system/erlang-services/ai_code_improver/Dockerfile
+++ b/mental_models_system/erlang-services/ai_code_improver/Dockerfile
@@ -3,13 +3,15 @@ FROM erlang:26-alpine
 WORKDIR /app
 
 RUN apk add --no-cache git curl
+# Download rebar3
+RUN curl -o rebar3 https://s3.amazonaws.com/rebar3/rebar3 && chmod +x rebar3
 
 COPY rebar.config .
-RUN rebar3 get-deps
+RUN ./rebar3 get-deps
 
 COPY src/ src/
 
-RUN rebar3 compile
+RUN ./rebar3 compile
 
 EXPOSE 8025
 
