fix: Add rebar3 download to blue_green_orchestrator Dockerfile
Last missing Dockerfile - all 21 Erlang services now have rebar3 download step.

--- a/mental_models_system/erlang-services/blue_green_orchestrator/Dockerfile
+++ b/mental_models_system/erlang-services/blue_green_orchestrator/Dockerfile
@@ -1,10 +1,15 @@
 FROM erlang:26-alpine
 
-RUN apk add --no-cache curl wget
+RUN apk add --no-cache curl wget git
 
 WORKDIR /app
 
+# Download rebar3
+RUN curl -o rebar3 https://s3.amazonaws.com/rebar3/rebar3 && chmod +x rebar3
+
 COPY rebar.config .
+RUN ./rebar3 get-deps
+
 COPY src/ src/
 
 RUN ./rebar3 compile
