feat: Add bootstrap watcher to solve chicken-and-egg problem
The bootstrap watcher:
1. Runs as a separate lightweight container
2. Monitors GitHub for new commits every 60 seconds
3. When found, pulls code and rebuilds auto-updater
4. This ensures auto-updater can always be updated even if broken

Also added bootstrap.sh for one-time manual bootstrap if needed.

To start: docker-compose up -d bootstrap-watcher

--- a/mental_models_system/erlang-services/docker-compose.yml
+++ b/mental_models_system/erlang-services/docker-compose.yml
@@ -19,6 +19,23 @@
 
 services:
   # ============================================================================
+  # BOOTSTRAP WATCHER - Watches for updates and restarts auto-updater
+  # This solves the chicken-and-egg problem where broken auto-updater can't update itself
+  # ============================================================================
+  bootstrap-watcher:
+    build: ./bootstrap_watcher
+    container_name: mental-models-bootstrap
+    restart: always
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - .:/services
+    environment:
+      - GITHUB_BRANCH=release2
+      - BOOTSTRAP_INTERVAL=60
+    networks:
+      - mental-models-network
+
+  # ============================================================================
   # AUTO-UPDATER SERVICE - FIRST AND MOST FUNDAMENTAL SERVICE
   # This service MUST start before all others and has NO dependencies.
   # It can self-heal the system even if other services fail to start.
