--- a/mental_models_system/erlang-services/docker-compose.yml
+++ b/mental_models_system/erlang-services/docker-compose.yml
@@ -55,7 +55,7 @@ services:
     environment:
       - GITHUB_SSH_URL=git@github.com:Ripple-Analytics/Ripple_Analytics.git
       - GITHUB_REPO_URL=https://github.com/Ripple-Analytics/Ripple_Analytics.git
-      - GITHUB_BRANCH=release
+      - GITHUB_BRANCH=release2
       - UPDATE_CHECK_INTERVAL=300
       - GITHUB_TOKEN=${GITHUB_TOKEN:-}
       - GITHUB_REPO=Ripple-Analytics/Ripple_Analytics
@@ -88,7 +88,7 @@ services:
     environment:
       - GITHUB_SSH_URL=git@github.com:Ripple-Analytics/Ripple_Analytics.git
       - GITHUB_REPO_URL=https://github.com/Ripple-Analytics/Ripple_Analytics.git
-      - GITHUB_BRANCH=release
+      - GITHUB_BRANCH=release2
       - UPDATE_CHECK_INTERVAL=300
       - GITHUB_TOKEN=${GITHUB_TOKEN:-}
       - GITHUB_REPO=Ripple-Analytics/Ripple_Analytics
@@ -121,7 +121,7 @@ services:
     environment:
       - GITHUB_SSH_URL=git@github.com:Ripple-Analytics/Ripple_Analytics.git
       - GITHUB_REPO_URL=https://github.com/Ripple-Analytics/Ripple_Analytics.git
-      - GITHUB_BRANCH=release
+      - GITHUB_BRANCH=release2
       - UPDATE_CHECK_INTERVAL=300
       - GITHUB_TOKEN=${GITHUB_TOKEN:-}
       - GITHUB_REPO=Ripple-Analytics/Ripple_Analytics
@@ -211,7 +211,7 @@ services:
     environment:
       - GITHUB_SSH_URL=git@github.com:Ripple-Analytics/Ripple_Analytics.git
       - GITHUB_REPO_URL=https://github.com/Ripple-Analytics/Ripple_Analytics.git
-      - GITHUB_BRANCH=release
+      - GITHUB_BRANCH=release2
       - GITHUB_TOKEN=${GITHUB_TOKEN:-}
       - GITHUB_REPO=Ripple-Analytics/Ripple_Analytics
     restart: unless-stopped
