feat: Bootstrap watcher uses GitHub API instead of git commands
This solves the chicken-and-egg problem:
- Uses GitHub API (curl) to detect new commits
- Does NOT rely on git rev-parse which was broken
- Forcibly rebuilds auto-updater when new commit detected
- Self-healing: can recover from any broken state

The bootstrap watcher runs independently and can always
detect new commits even if the auto-updater is broken.

--- a/mental_models_system/erlang-services/bootstrap_watcher/Dockerfile
+++ b/mental_models_system/erlang-services/bootstrap_watcher/Dockerfile
@@ -1,10 +1,24 @@
 FROM alpine:3.18
 
-RUN apk add --no-cache bash git curl docker-cli
+# Install minimal dependencies - curl for API, git for pulling, docker-compose for rebuilding
+RUN apk add --no-cache \
+    bash \
+    curl \
+    git \
+    docker-cli \
+    docker-compose
+
+# Create data directory
+RUN mkdir -p /data
 
 WORKDIR /watcher
 
+# Copy watcher script
 COPY watch.sh /watcher/watch.sh
 RUN chmod +x /watcher/watch.sh
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD [ -f /data/bootstrap_status.json ] && cat /data/bootstrap_status.json | grep -q '"status"' || exit 1
 
 CMD ["/watcher/watch.sh"]
