--- a/mental_models_system/erlang-services/docker-compose.yml
+++ b/mental_models_system/erlang-services/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     environment:
       - GITHUB_BRANCH=release2
       - DEPLOYMENT_ENV=blue
+      - GITHUB_TOKEN=${GITHUB_TOKEN:-}
     networks:
       - mental-models-network
 
@@ -51,6 +52,7 @@ services:
     environment:
       - GITHUB_BRANCH=release2
       - DEPLOYMENT_ENV=green
+      - GITHUB_TOKEN=${GITHUB_TOKEN:-}
     networks:
       - mental-models-network
 
